assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


State 109 conflicts: 9 shift/reduce
State 135 conflicts: 9 shift/reduce
State 146 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' features_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' features_list '}' ';'
    6      | CLASS error '}' ';'

    7 features_list: features
    8              | /* empty */

    9 features: feature
   10         | features feature

   11 feature: OBJECTID '(' formals ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID ':' TYPEID ';'
   13        | OBJECTID ':' TYPEID ASSIGN expr ';'
   14        | error ';'

   15 formals: formal
   16        | formals ',' formal
   17        | /* empty */

   18 formal: OBJECTID ':' TYPEID

   19 expr: OBJECTID ASSIGN expr
   20     | expr '.' OBJECTID '(' param_expr ')'
   21     | expr '@' TYPEID '.' OBJECTID '(' param_expr ')'
   22     | OBJECTID '(' param_expr ')'
   23     | IF expr THEN expr ELSE expr FI
   24     | WHILE expr LOOP expr POOL
   25     | '{' one_or_more_expr '}'
   26     | LET let_expr
   27     | CASE expr OF case_branch_list ESAC
   28     | NEW TYPEID
   29     | ISVOID expr
   30     | expr '+' expr
   31     | expr '-' expr
   32     | expr '*' expr
   33     | expr '/' expr
   34     | '~' expr
   35     | expr '<' expr
   36     | expr LE expr
   37     | expr '=' expr
   38     | NOT expr
   39     | '(' expr ')'
   40     | OBJECTID
   41     | INT_CONST
   42     | STR_CONST
   43     | BOOL_CONST

   44 let_expr: OBJECTID ':' TYPEID IN expr
   45         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   46         | OBJECTID ':' TYPEID ',' let_expr
   47         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   48         | error IN expr
   49         | error ',' let_expr

   50 one_or_more_expr: expr ';'
   51                 | one_or_more_expr expr ';'
   52                 | error ';'

   53 param_expr: expr
   54           | param_expr ',' expr
   55           | /* empty */

   56 case_branch_list: case_branch
   57                 | case_branch_list case_branch

   58 case_branch: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 20 21 22 39
')' (41) 11 20 21 22 39
'*' (42) 32
'+' (43) 30
',' (44) 16 46 47 49 54
'-' (45) 31
'.' (46) 20 21
'/' (47) 33
':' (58) 11 12 13 18 44 45 46 47 58
';' (59) 4 5 6 11 12 13 14 50 51 52 58
'<' (60) 35
'=' (61) 37
'@' (64) 21
'{' (123) 4 5 11 25
'}' (125) 4 5 6 11 25
'~' (126) 34
error (256) 6 14 48 49 52
CLASS (258) 4 5 6
ELSE (259) 23
FI (260) 23
IF (261) 23
IN (262) 44 45 48
INHERITS (263) 5
LET (264) 26
LOOP (265) 24
POOL (266) 24
THEN (267) 23
WHILE (268) 24
CASE (269) 27
ESAC (270) 27
OF (271) 27
DARROW (272) 58
NEW (273) 28
ISVOID (274) 29
STR_CONST (275) 42
INT_CONST (276) 41
BOOL_CONST (277) 43
TYPEID (278) 4 5 11 12 13 18 21 28 44 45 46 47 58
OBJECTID (279) 11 12 13 18 19 20 21 22 40 44 45 46 47 58
ASSIGN (280) 13 19 45 47
NOT (281) 38
LE (282) 36
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
features_list (49)
    on left: 7 8, on right: 4 5
features (50)
    on left: 9 10, on right: 7 10
feature (51)
    on left: 11 12 13 14, on right: 9 10
formals (52)
    on left: 15 16 17, on right: 11 16
formal (53)
    on left: 18, on right: 15 16
expr (54)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43, on right: 11 13 19 20 21 23 24 27 29 30 31
    32 33 34 35 36 37 38 39 44 45 47 48 50 51 53 54 58
let_expr (55)
    on left: 44 45 46 47 48 49, on right: 26 46 47 49
one_or_more_expr (56)
    on left: 50 51 52, on right: 25 51
param_expr (57)
    on left: 53 54 55, on right: 20 21 22 54
case_branch_list (58)
    on left: 56 57, on right: 27 57
case_branch (59)
    on left: 58, on right: 56 57


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' features_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' features_list '}' ';'
    6      | CLASS . error '}' ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


state 2

    0 $accept: program . $end

    $end  shift, and go to state 7


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    6 class: CLASS error . '}' ';'

    '}'  shift, and go to state 9


state 6

    4 class: CLASS TYPEID . '{' features_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' features_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


state 7

    0 $accept: program $end .

    $default  accept


state 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 9

    6 class: CLASS error '}' . ';'

    ';'  shift, and go to state 12


state 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' features_list '}' ';'

    TYPEID  shift, and go to state 13


state 11

    4 class: CLASS TYPEID '{' . features_list '}' ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    '}'  reduce using rule 8 (features_list)

    features_list  go to state 16
    features       go to state 17
    feature        go to state 18


state 12

    6 class: CLASS error '}' ';' .

    $default  reduce using rule 6 (class)


state 13

    5 class: CLASS TYPEID INHERITS TYPEID . '{' features_list '}' ';'

    '{'  shift, and go to state 19


state 14

   14 feature: error . ';'

    ';'  shift, and go to state 20


state 15

   11 feature: OBJECTID . '(' formals ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID . ':' TYPEID ';'
   13        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


state 16

    4 class: CLASS TYPEID '{' features_list . '}' ';'

    '}'  shift, and go to state 23


state 17

    7 features_list: features .
   10 features: features . feature

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    '}'  reduce using rule 7 (features_list)

    feature  go to state 24


state 18

    9 features: feature .

    $default  reduce using rule 9 (features)


state 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' . features_list '}' ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    '}'  reduce using rule 8 (features_list)

    features_list  go to state 25
    features       go to state 17
    feature        go to state 18


state 20

   14 feature: error ';' .

    $default  reduce using rule 14 (feature)


state 21

   11 feature: OBJECTID '(' . formals ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 17 (formals)

    formals  go to state 27
    formal   go to state 28


state 22

   12 feature: OBJECTID ':' . TYPEID ';'
   13        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 29


state 23

    4 class: CLASS TYPEID '{' features_list '}' . ';'

    ';'  shift, and go to state 30


state 24

   10 features: features feature .

    $default  reduce using rule 10 (features)


state 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' features_list . '}' ';'

    '}'  shift, and go to state 31


state 26

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


state 27

   11 feature: OBJECTID '(' formals . ')' ':' TYPEID '{' expr '}' ';'
   16 formals: formals . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


state 28

   15 formals: formal .

    $default  reduce using rule 15 (formals)


state 29

   12 feature: OBJECTID ':' TYPEID . ';'
   13        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


state 30

    4 class: CLASS TYPEID '{' features_list '}' ';' .

    $default  reduce using rule 4 (class)


state 31

    5 class: CLASS TYPEID INHERITS TYPEID '{' features_list '}' . ';'

    ';'  shift, and go to state 37


state 32

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


state 33

   11 feature: OBJECTID '(' formals ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 39


state 34

   16 formals: formals ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 40


state 35

   13 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 55


state 36

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


state 37

    5 class: CLASS TYPEID INHERITS TYPEID '{' features_list '}' ';' .

    $default  reduce using rule 5 (class)


state 38

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


state 39

   11 feature: OBJECTID '(' formals ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 56


state 40

   16 formals: formals ',' formal .

    $default  reduce using rule 16 (formals)


state 41

   23 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 57


state 42

   26 expr: LET . let_expr

    error     shift, and go to state 58
    OBJECTID  shift, and go to state 59

    let_expr  go to state 60


state 43

   24 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 61


state 44

   27 expr: CASE . expr OF case_branch_list ESAC

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 62


state 45

   28 expr: NEW . TYPEID

    TYPEID  shift, and go to state 63


state 46

   29 expr: ISVOID . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 64


state 47

   42 expr: STR_CONST .

    $default  reduce using rule 42 (expr)


state 48

   41 expr: INT_CONST .

    $default  reduce using rule 41 (expr)


state 49

   43 expr: BOOL_CONST .

    $default  reduce using rule 43 (expr)


state 50

   19 expr: OBJECTID . ASSIGN expr
   22     | OBJECTID . '(' param_expr ')'
   40     | OBJECTID .

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 40 (expr)


state 51

   38 expr: NOT . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 67


state 52

   34 expr: '~' . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 68


state 53

   25 expr: '{' . one_or_more_expr '}'

    error       shift, and go to state 69
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr              go to state 70
    one_or_more_expr  go to state 71


state 54

   39 expr: '(' . expr ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 72


state 55

   13 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   20 expr: expr . '.' OBJECTID '(' param_expr ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ';'  shift, and go to state 82


state 56

   11 feature: OBJECTID '(' formals ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 83


state 57

   20 expr: expr . '.' OBJECTID '(' param_expr ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   23     | IF expr . THEN expr ELSE expr FI
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    THEN  shift, and go to state 84
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


state 58

   48 let_expr: error . IN expr
   49         | error . ',' let_expr

    IN   shift, and go to state 85
    ','  shift, and go to state 86


state 59

   44 let_expr: OBJECTID . ':' TYPEID IN expr
   45         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   46         | OBJECTID . ':' TYPEID ',' let_expr
   47         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_expr

    ':'  shift, and go to state 87


state 60

   26 expr: LET let_expr .

    $default  reduce using rule 26 (expr)


state 61

   20 expr: expr . '.' OBJECTID '(' param_expr ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   24     | WHILE expr . LOOP expr POOL
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    LOOP  shift, and go to state 88
    LE    shift, and go to state 73
    '<'   shift, and go to state 74
    '='   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


state 62

   20 expr: expr . '.' OBJECTID '(' param_expr ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   27     | CASE expr . OF case_branch_list ESAC
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    OF   shift, and go to state 89
    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


state 63

   28 expr: NEW TYPEID .

    $default  reduce using rule 28 (expr)


state 64

   20 expr: expr . '.' OBJECTID '(' param_expr ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   29     | ISVOID expr .
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 29 (expr)


state 65

   19 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr  go to state 90


state 66

   22 expr: OBJECTID '(' . param_expr ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    $default  reduce using rule 55 (param_expr)

    expr        go to state 91
    param_expr  go to state 92


state 67

   20 expr: expr . '.' OBJECTID '(' param_expr ')'
   21     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   35     | expr . '<' expr
   36     | expr . LE expr
   37     | expr . '=' expr
   38     | NOT expr .

    LE   shift, and go to state 73
    '<'  shift, and go to state 74
    '='  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 38 (expr)


state 68
